# ModelEase

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ModelEase/: __init__.py  dataSet.py  decorators.py  model.py
src/ModelEase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ModelEase/model/: __init__.py  _model.py  classification.py  regression.py
tests/: iris.csv  main.py
tests/classification_test/: .make_dataset.py  main.py  test1.py  test2.py
tests/regression_test/: .make_dataset.py  california.csv  test1.py
