[project]
name = "ModelEase"
version = "0.1.5"
authors = [
    { name = "YYSF-Y", email = "brait.w216@gmail.com" },
]
dependencies = [
    "contourpy>=1.2.0",
    "cycler>=0.12.1",
    "fonttools>=4.49.0",
    "joblib>=1.3.2",
    "kiwisolver>=1.4.5",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "packaging>=24.0",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.1",
    "scikit-learn>=1.4.1.post1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "six>=1.16.0",
    "threadpoolctl>=3.3.0",
    "tzdata>=2024.1",
]
description = "A Python package for streamlined development and deployment of supervised machine learning models. It provides high-level abstractions for creating datasets, training models, making predictions, and evaluating model performance with minimal code."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yysf-brait/ModelEase"
Issues = "https://github.com/yysf-brait/ModelEase/issues"